# footloose2

./: .gitignore  LICENSE  README.md
.github/workflows/: release-app.yml  release-server.yml
app/: .npmrc  .stylelintrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.dts.json  tsconfig.app.json  vite.config.ts
app/public/: app.css  cli.js  tsconfig.json
app/public/commands/: eject.js  start.js
app/src/: config.ts  main.tsx
ci/: publish.js
server/: Cargo.toml  package.json
server/src/: archives.rs  errors.rs  helpers.rs  main.rs  managers.rs  misc.rs  models.rs  tasks.rs  test_helpers.rs  traits.rs
server/src/archives/: tar.rs  tar_entry.rs  tgz.rs  zip.rs  zip_entry.rs
server/src/errors/: bookmark_error.rs  command_error.rs  sender_error.rs  task_error.rs  virtual_dir_error.rs  watch_error.rs
server/src/managers/: bookmark_manager.rs  task_manager.rs  watch_manager.rs
server/src/misc/: command.rs  frame_set.rs  ls.rs  sender.rs  watch.rs  watch_info.rs
server/src/models/: archive_kind.rs  bookmark.rs  client_config.rs  entry.rs  mime_type.rs  progress_task_arg.rs  progress_task_config.rs  sh_task_config.rs  task_arg.rs  task_control.rs  task_result.rs  watch_control.rs
server/src/tasks/: abort_progress_task.rs  bookmark_task.rs  change_dir_task.rs  change_virtual_dir_task.rs  extract_entries_task.rs  open_task.rs  progress_task.rs  remove_client_task.rs  sh_task.rs
server/src/traits/: archive.rs  archive_entry.rs  error.rs  internal_task_base.rs  task_base.rs
server/tests/: readme.md
server/tests/archives/: dir-entries.tar  dir-entries.tgz  no-dir-entries.tar  no-dir-entries.tgz
server/tests/files/1 ゲーム/1 オープンワールド/: 1 テキスト.txt
server/tests/fixtures/: abort_progress_task.json  bookmark_task.json  change_dir_task.json  change_virtual_dir_task.json  command.json  extract_entries_task.json  open_task.json  progress_task.json  sh_task.json
(+123 files in other folders)
