[package]
name = "footloose2-server"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"
jsonschema = "0.32.1"
open = "5.3.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
chrono = "0.4.41"
unicode-normalization = "0.1.24"
zip = "2.4.2"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
tar = "0.4.44"
flate2 = "1.1.2"
infer = "0.19.0"
tower-http = { version = "0.6.6", features = ["fs"] }
content_inspector = "0.2.4"
shellexpand = "3.1.1"
base64 = "0.22.1"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.20.0"
