[package]
name = "footloose2-server"
version = "0.0.6"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.57", features = ["derive"] }
futures = "0.3.31"
jsonschema = "0.32.1"
open = "5.3.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
chrono = "0.4.43"
unicode-normalization = "0.1.25"
zip = "2.4.2"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
tar = "0.4.44"
flate2 = "1.1.9"
infer = "0.19.0"
tower-http = { version = "0.6.8", features = ["fs"] }
content_inspector = "0.2.4"
shellexpand = "3.1.1"
base64 = "0.22.1"
html-escape = "0.2.13"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.24.0"
